name:                pilfold-back

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            A backend for Pilfolds
description:         A backend for Pilfolds
homepage:            https://github.com/lpil/pilfold-back

license:             MPL-2.0
license-file:        LICENSE

author:              Louis Pilfold
maintainer:          louis@lpil.uk
copyright:           Copyright © 2015 Louis Pilfold. All Rights Reserved.

category:            Web
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/lpil/pilfold-back

executable pilfold-back
  main-is:             Main.hs
  
  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  build-depends:       base >=4.7 && <4.8,
                       -- process >=1.2 && <1.3,
                       -- warp ==1.3.*,
                       -- wai ==1.3.*,
                       wai-extra,
                       -- wai-middleware-static,
                       scotty,
                       http-types,
                       text,
                       containers

  hs-source-dirs:      src
  default-language:    Haskell2010
